# opticon

./: .gitignore  README.md  configure
include/libopticon/: aes.h  auth.h  codec.h  compress.h  daemon.h  defaultmeters.h  fillrandom.h  glob.h  hash.h  host.h  host_import.h  ioport.h  ioport_buffer.h  notify.h  packetqueue.h  popen.h  pwcrypt.h  strnappend.h  tenant.h  thread.h  timer.h  timestr.h  transport.h  transport_udp.h  uuid.h  var.h  var_parse.h  watchlist.h
include/libopticondb/: db.h  db_local.h
init/: opticon-agent.init  opticon-agent.service  opticon-api.service  opticon-collector.service
lib/winlibc/additional/include/: string.h  syslog.h  time.h  wuapi.h
lib/winlibc/additional/include/arpa/: inet.h
lib/winlibc/additional/include/sys/: errno.h  select.h  socket.h
lib/winlibc/additional/src/: memory.c  string.c  time.c
lib/winlibc/beforewin8/src/: endian.c
pkg/: debian-postinst.sh  mkdeb.sh  mkedgeos.sh  mkrpm.sh  opticon-agent.debian-postinst.sh  opticon-agent.spec.in  opticon-api.debian-postinst.sh  opticon-collector.debian-postinst.sh
pkg/msi/opticon-agent/: build-msi-wix.bat  build-msiCustomActionDll-gcc.bat  build.bat  msiCustomActionDll.c  opticon-agent.wxs
src/libopticon/: Makefile  adjust.c  aes.c  auth.c  cliopt.c  codec.c  codec_json.c  codec_pkt.c  compress.c  daemon.c  defaultmeters.c  fillrandom.c  glob.c  hash.c  host.c  host_import.c  ioport.c  ioport_buffer.c  ioport_file.c  log.c  meter.c  notify.c  packetqueue.c  pktwrap.c  popen.c  pwcrypt.c  react.c  strnappend.c  summary.c  tenant.c  thread.c  timer.c  timestr.c  transport.c  transport_udp.c  util.c  uuid.c  var.c  var_dump.c  var_parse.c  (+1 more)
src/libopticon/rsrc/text/: defgraphs.rsrc  defmeters.rsrc  defsummary.rsrc
src/libopticondb/: db.c  db_local.c
src/opticon-agent/: CMakeLists.txt  Makefile  build-cmake.bat  build-gcc.bat  build-versionSourceFile.bat  collectorlist.c  helper.c  helpers.conf  main.c  mkversion.sh  opticon-agent.conf.example  opticon-agent.h  opticon-defaultprobes.conf  opticon-defaultprobes.win.conf  probelist.c  probes.c  probes.h  probes_darwin.c  probes_linux.c  probes_windows.c  resender.c  tproc.c  tproc.h  version.h  winbuild.md  wordlist.c  wordlist.h
src/opticon-agent/extprobes/: bgp-zebra.probe  docker.probe  edgeoslb.probe  libvirt.probe  modstatus.probe  mysql.probe  omreport.check  omreport.example  omreport.probe  pihole.probe  raid.check  raid.probe  updates.check  updates.probe  zebrabgp.probe
src/opticon-agent/extprobes/win/: mssql.probe.ps1  omreport.example.ps1  omreport.probe.ps1  storagespaces.probe.ps1
src/opticon-agent/rsrc/text/: defprobes.rsrc
src/opticon-agent/setup/: opticon-setup
src/opticon-agent/win/: stringHelper.c  stringHelper.h  systemFirmwareInfo.c  systemFirmwareInfo.h  timeHelper.c  timeHelper.h  updater.c  updater.h  winService.c  winService.h
src/opticon-api/: Makefile  authsession.c  authsession.h  cmd.h  cmd_err.c  cmd_host.c  cmd_tenant.c  cmd_user.c  externaldata.c  externaldata.h  main.c  opticon-api.conf.example  options.h  req_context.c  req_context.h  tokencache.c  tokencache.h
src/opticon-cli/: Makefile  api.c  cmd.c  cmd.h  debug.h  main.c  mkrsrc  opticon-cli.conf.example  prettyprint.c  prettyprint.h  readpass.c  readpass.h  term.c  term.h
src/opticon-cli/rsrc/icns/: appicon.rsrc  computer.rsrc  container.rsrc  db.rsrc  disks.rsrc  dns.rsrc  fan.rsrc  gauge.rsrc  gears.rsrc  graph.rsrc  iface.rsrc  lock.rsrc  log.rsrc  overview.rsrc  people.rsrc  pkg.rsrc  power.rsrc  procs.rsrc  raid.rsrc  remote.rsrc  router.rsrc  sessions.rsrc  temp.rsrc  vm.rsrc  www.rsrc
src/opticon-cli/rsrc/text/: usage.rsrc
src/opticon-collector/: Makefile  decode.c  main.c  opticon-collector.conf.example  opticon-collector.h  opticon-graph.conf.example  opticon-meter.conf.example  ping.c  ping.h  watcher.c
src/opticon-gui/webroot/: config.js  config.js.example  index.html  main.css  main.js
src/opticon-gui/webroot/core/: API.js  App.js  Graph.js  Markup.js  Module.js  Query.js  Router.js  Spline.js
src/opticon-gui/webroot/ext/: GaugeMeter.js  jquery.ui.shake.js  vidi.js
src/opticon-gui/webroot/module/: Auth.api.js  FatalError.dialog.html  FatalError.dialog.js  LoginScreen.dialog.html  LoginScreen.dialog.js  Opticon.api.js  ServerList.page.html  ServerList.page.js  ServerView.page.html  ServerView.page.js
test/: runtest.sh  test_notify.c  test_popen.c  test_popen.sh  test_roundtrip_encoding.c  test_var.c  test_watcher.c
tools/: mkrsrc
